# memoryvault-kit

./: .gitignore  .mcp.json  README.md  SETUP.md  marketplace.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json  recommended-settings.json
.mvkit/: learned_preferences.example.json  retrieval_config.example.json
docs/: AGENTS.md  LAUNCH_READINESS.md  LIFECYCLE.md  LIMITATIONS.md  agent-architecture.md  architecture-bridge.md  enterprise-mode-scope.md  eval-playbook.md  eval_methodology.md  fresh-vault-smoke-test.md  onboarding-flow.md  retrieval-consistency.md  retrieval_internals.md  schema.md  self-model.md  setup-cost-transparency.md  skill-conventions.md  skill-evolution.md  skill-lifecycle.md  surface-tree-model.md
docs/ingest/: README.md  calendar.md  code.md  gdrive.md  gmail.md  granola.md  linear.md  notion.md  slack.md
docs/memory-playbooks/: README.md  decision.md  event.md  feedback.md  preference.md  project_fact.md  reference.md  relationship.md  user_fact.md
examples/tiny_vault/: INDEX.md
memoryvault_kit/: PRESERVATION_RULES.md  authoring_queue.py  cli.py  doctor.py  mcp_server.py  migrate.py  org.py  profile.py  query_log.py  schema.yaml  setup.py
memoryvault_kit/dashboard/: build.py
memoryvault_kit/eval/: __main__.py  audit_failures.py  auto_tune.py  bloat.py  consistency.py  diagnose_alias.py  diagnose_lateral.py  diagnose_remaining.py  fill_quality.py  generate.py  intelligent_init.py  pipeline.py  pollution.py
memoryvault_kit/graph/: audit.py  augment_people.py  authoring_cycle.py  auto_relate.py  backfill_event_date.py  backfill_parent_surface.py  checks.py  connect_entities.py  coverage.py  coverage_gaps.py  daily.py  discover_org.py  discover_surfaces.py  enrich_gaps.py  fix_event_date_semantics.py  heal.py  heal_user.py  in_degree.py  index.py  lint.py  log_retrieval_gap.py  replay_enrich.py  split_mentions.py  tag_entities.py  track.py
memoryvault_kit/ingest/: _dedupe.py  agent_prompt.md  agent_prompt_remote.md  claude_memory.py  code_repo.py  linear.py  notion.py
memoryvault_kit/retrieval/: answer_coverage.py  bm25.py  build_alias_map.py  combined.py  config.py  dense.py  drive_proxy.py  entity_lookup.py  graph_walk.py  grep_baseline.py  hybrid.py  reranker.py  score.py  tree_walk.py
skills/customer-meeting-prep/: SKILL.md
skills/granola-series-recap/: SKILL.md
skills/memory-ask/: SKILL.md
skills/memory-audit/: SKILL.md
skills/memory-authoring-cycle/: SKILL.md
skills/memory-coverage-agent/: SKILL.md
skills/memory-deep-dive/: SKILL.md
skills/memory-entity-bootstrap/: SKILL.md
skills/memory-eval-runner/: SKILL.md
skills/memory-graph-audit/: SKILL.md
skills/memory-heal/: SKILL.md
skills/memory-heal-agent/: SKILL.md
skills/memory-ingest/: SKILL.md
skills/memory-ingest-code/: SKILL.md
skills/memory-master-ingest/: SKILL.md
skills/memory-refresh/: SKILL.md
skills/memory-save/: SKILL.md
skills/memory-schedule/: SKILL.md
skills/memory-setup/: SKILL.md
skills/memory-stub-enricher/: SKILL.md
skills/memory-use/: SKILL.md
skills/memoryvault-cowork/: DEPLOYMENT.md  SKILL.md
skills/mv-authoring-cycle/: SKILL.md
skills/mv-coverage-agent/: SKILL.md
skills/mv-deep-dive/: SKILL.md
tests/: test_checks.py  test_smoke.py
(+34 files in other folders)
