[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryvault-kit"
version = "0.1.0"
description = "Personal memory layer over a folder of markdown notes — BM25 + entity-graph retrieval, with a quality loop that keeps it from rotting."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ayush Mall"}]
keywords = ["memory", "retrieval", "personal-knowledge", "rag", "bm25", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = []

[project.optional-dependencies]
answer = ["anthropic>=0.30"]
http = ["starlette>=0.37", "uvicorn>=0.30"]
dev = ["pytest", "ruff"]

[project.scripts]
mv = "memoryvault_kit.cli:main"

[project.urls]
Homepage = "https://github.com/ayushmall/memoryvault-kit"
Documentation = "https://github.com/ayushmall/memoryvault-kit/blob/main/SETUP.md"
Issues = "https://github.com/ayushmall/memoryvault-kit/issues"

[tool.setuptools.packages.find]
include = ["memoryvault_kit*"]

[tool.setuptools.package-data]
memoryvault_kit = ["ingest/agent_prompt.md", "ingest/agent_prompt_remote.md"]
